--- a/review/dlr_tables2.css
+++ b/review/dlr_tables2.css
@@ -16,7 +16,7 @@
 /* Table Styles */
 table.programs{
     width: 100%;
-    border: 15px solid rgb(151,151,151) outset;
+    border: 15px rgb(151,151,151) outset;
     border-collapse: collapse;
     font-family: Arial, Verdana, sans-serif;
 }
